@@ -51,36 +51,91 @@ class Roda
     #   r.multi_route do
     #     "default body"
     #   end
+    # 
+    # If a block is not provided to multi_route, the return value of the named
+    # route block will be used.
+    #
+    # ## Namespace Support
+    #
+    # The multi_route plugin also has support for namespaces, allowing you to
+    # use r.multi_route at multiple levels in your routing tree.  Example:
+    #
+    #   route('foo') do |r|
+    #     r.multi_route('foo')
+    #   end
+    #
+    #   route('bar') do |r|
+    #     r.multi_route('bar')
+    #   end
+    #
+    #   route('baz', 'foo') do |r|
+    #     # handles /foo/baz prefix
+    #   end
+    #
+    #   route('quux', 'foo') do |r|
+    #     # handles /foo/quux prefix
+    #   end
+    #
+    #   route('baz', 'bar') do |r|
+    #     # handles /bar/baz prefix
+    #   end
+    #
+    #   route('quux', 'bar') do |r|
+    #     # handles /bar/quux prefix
+    #   end
+    #
+    #   route do |r|
+    #     r.multi_route
+    #
+    #     # or
+    #
+    #     r.on "foo" do
+    #       r.on("baz"){r.route("baz", "foo")}
+    #       r.on("quux"){r.route("quux", "foo")}
+    #     end
+    #
+    #     r.on "bar" do
+    #       r.on("baz"){r.route("baz", "bar")}
+    #       r.on("quux"){r.route("quux", "bar")}
+    #     end
+    #   end
+    #
     module MultiRoute
       # Initialize storage for the named routes.
       def self.configure(app)
-        app.instance_exec{@named_routes ||= {}}
+        app.instance_exec do
+          @namespaced_routes ||= {}
+          app::RodaRequest.instance_variable_set(:@namespaced_route_regexps, {})
+        end
       end
 
       module ClassMethods
         # Copy the named routes into the subclass when inheriting.
         def inherited(subclass)
           super
-          subclass.instance_variable_set(:@named_routes, @named_routes.dup)
+          nsr = subclass.instance_variable_set(:@namespaced_routes, {})
+          @namespaced_routes.each{|k, v| nsr[k] = v.dup}
+          subclass::RodaRequest.instance_variable_set(:@namespaced_route_regexps, {})
         end
 
         # The names for the currently stored named routes
-        def named_routes
-          @named_routes.keys
+        def named_routes(namespace=nil)
+          @namespaced_routes[namespace].keys
         end
 
         # Return the named route with the given name.
-        def named_route(name)
-          @named_routes[name]
+        def named_route(name, namespace=nil)
+          @namespaced_routes[namespace][name]
         end
 
         # If the given route has a name, treat it as a named route and
         # store the route block.  Otherwise, this is the main route, so
         # call super.
-        def route(name=nil, &block)
+        def route(name=nil, namespace=nil, &block)
           if name
-            @named_routes[name] = block
-            self::RodaRequest.clear_named_route_regexp!
+            @namespaced_routes[namespace] ||= {}
+            @namespaced_routes[namespace][name] = block
+            self::RodaRequest.clear_named_route_regexp!(namespace)
           else
             super(&block)
           end
@@ -94,13 +149,13 @@ class Roda
         # This shouldn't be an issue in production applications, but
         # during development it's useful to support new named routes
         # being added while the application is running.
-        def clear_named_route_regexp!
-          @named_route_regexp = nil
+        def clear_named_route_regexp!(namespace=nil)
+          @namespaced_route_regexps.delete(namespace)
         end
 
         # A regexp matching any of the current named routes.
-        def named_route_regexp
-          @named_route_regexp ||= /(#{Regexp.union(roda_class.named_routes.select{|s| s.is_a?(String)}.sort.reverse)})/
+        def named_route_regexp(namespace=nil)
+          @namespaced_route_regexps[namespace] ||= /(#{Regexp.union(roda_class.named_routes(namespace).select{|s| s.is_a?(String)}.sort.reverse)})/
         end
       end
 
@@ -109,16 +164,20 @@ class Roda
         # named routes.  If so, call that named route.  If not, do nothing.
         # If the named route does not handle the request, and a block
         # is given, yield to the block.
-        def multi_route
-          on self.class.named_route_regexp do |section|
-            route(section)
-            yield if block_given?
+        def multi_route(namespace=nil)
+          on self.class.named_route_regexp(namespace) do |section|
+            r = route(section, namespace)
+            if block_given?
+              yield
+            else
+              r
+            end
           end
         end
 
         # Dispatch to the named route with the given name.
-        def route(name)
-          scope.instance_exec(self, &self.class.roda_class.named_route(name))
+        def route(name, namespace=nil)
+          scope.instance_exec(self, &self.class.roda_class.named_route(name, namespace))
         end
       end
     end
