@@ -13,6 +13,8 @@ describe "multi_route plugin" do
         r.is "a" do
           "geta"
         end
+
+        "getd"
       end
 
       route("post") do |r|
@@ -23,6 +25,8 @@ describe "multi_route plugin" do
         r.is "a" do
           "posta"
         end
+
+        "postd"
       end
 
       route(:p) do |r|
@@ -143,5 +147,88 @@ describe "multi_route plugin" do
     body('/b', 'REQUEST_METHOD'=>'POST').should == '2b'
     status('/c').should == 404
     status('/c', 'REQUEST_METHOD'=>'POST').should == 404
+  end
+
+  it "uses the named route return value in multi_route if no block is given" do
+    app.route{|r| r.multi_route}
+    body('/get').should == 'getd'
+    body('/post').should == 'postd'
+  end
+end
+
+describe "multi_route plugin" do 
+  before do
+    app(:bare) do
+      plugin :multi_route
+
+      route("foo", "foo") do |r|
+        "#{@p}ff"
+      end
+
+      route("bar", "foo") do |r|
+        "#{@p}fb"
+      end
+
+      route("foo", "bar") do |r|
+        "#{@p}bf"
+      end
+
+      route("bar", "bar") do |r|
+        "#{@p}bb"
+      end
+    end
+  end
+
+  it "handles namespaces in r.route" do
+    app.route("foo") do |r|
+      @p = 'f'
+      r.on("foo"){r.route("foo", "foo")}
+      r.on("bar"){r.route("bar", "foo")}
+      @p
+    end
+
+    app.route("bar") do |r|
+      @p = 'b'
+      r.on("foo"){r.route("foo", "bar")}
+      r.on("bar"){r.route("bar", "bar")}
+      @p
+    end
+
+    app.route do |r|
+      r.on("foo"){r.route("foo")}
+      r.on("bar"){r.route("bar")}
+    end
+
+    body('/foo').should == 'f'
+    body('/foo/foo').should == 'fff'
+    body('/foo/bar').should == 'ffb'
+    body('/bar').should == 'b'
+    body('/bar/foo').should == 'bbf'
+    body('/bar/bar').should == 'bbb'
+  end
+
+  it "handles namespaces in r.multi_route" do
+    app.route("foo") do |r|
+      @p = 'f'
+      r.multi_route("foo")
+      @p
+    end
+
+    app.route("bar") do |r|
+      @p = 'b'
+      r.multi_route("bar")
+      @p
+    end
+
+    app.route do |r|
+      r.multi_route
+    end
+
+    body('/foo').should == 'f'
+    body('/foo/foo').should == 'fff'
+    body('/foo/bar').should == 'ffb'
+    body('/bar').should == 'b'
+    body('/bar/foo').should == 'bbf'
+    body('/bar/bar').should == 'bbb'
   end
 end
