@@ -1,5 +1,9 @@
 = HEAD
 
+* Add namespace support to the multi_route plugin, to support more complex applications (jeremyevans)
+
+* Make r.multi_route use named route return value if not passed a block (jeremyevans)
+
 * Make r.multi_route prefer longer route if multiple routes have the same prefix (jeremyevans)
 
 * Add caching plugin, for handling http caching (jeremyevans)
